Prevent action groups from being cutoff by the footer
1. Calculate where group is going to be, if it will get cut off, then
dropup instead of down
2. As the action group can now drop up, the z-index should be higher
than the previous rows, so add a top z-index higher than the others and
use that when opened

--- a/ui-v2/app/styles/components/action-group.scss
+++ b/ui-v2/app/styles/components/action-group.scss
@@ -70,18 +70,29 @@
 %action-group ul {
   position: absolute;
   right: -10px;
-  top: 35px;
   padding: 1px;
 }
 %action-group ul::before {
   position: absolute;
   right: 18px;
-  top: -6px;
   content: '';
   display: block;
   width: 10px;
   height: 10px;
+}
+%action-group ul:not(.above) {
+  top: 35px;
+}
+%action-group ul:not(.above)::before {
+  top: -6px;
   transform: rotate(45deg);
+}
+%action-group ul.above {
+  bottom: 35px;
+}
+%action-group ul.above::before {
+  bottom: -6px;
+  transform: rotate(225deg);
 }
 %action-group li {
   position: relative;
